# unix_examples

./: .clang-format
01_intro/: ls1.c  mycat.c  shell1.c  shell2.c
02_standards/: conf.c  options.c  print_conf.h
03_fileio/: CMakeLists.txt  fileflags.c  hole.c  modflags.h  mycat.c  seek.c  setfl.c
04_files_and_dirs/: CMakeLists.txt  access.c  cdpwd.c  changemod.c  devrdev.c  filetype.c  ftw8.c  times.c  truncatefile.c  umask.c  unlink.c  zap.c
05_stdio/: CMakeLists.txt  buf.c  getcharbug.c  memstr.c  mkstemp.c
06_system_info/: getpwnam.c  strftime.c  uname.c
alp_server/: .gitignore  CMakeLists.txt  Makefile  common.c  diskfree.c  issue.c  main.c  module.c  processes.c  server.c  server.h  time.c
apue/: CMakeLists.txt
apue/01_intro/: CMakeLists.txt  getcputc.c  hello.c  ls1.c  mycat.c  shell1.c  shell2.c  testerror.c  uidgid.c
apue/02_standards/: CMakeLists.txt  conf.c  options.c
apue/03_fileio/: CMakeLists.txt  fileflags.c  hole.c  mycat.c  seek.c
apue/04_files_and_dirs/: CMakeLists.txt  access.c  cdpwd.c  changemod.c  devrdev.c  filetype.c  ftw8.c  mycd.c  path_alloc.h  times.c  truncatefile.c  umask.c  unlink.c  zap.c
apue/05_stdio/: CMakeLists.txt  buf.c  fgetsfputs.c  getcputc.c  memstr.c  mkstemp.c  tempfiles.c
apue/06_system_info/: CMakeLists.txt  uname.c
drivers/: .gitignore
drivers/button/: button.c
drivers/gpio/: gpio_test.c
drivers/hello/: hello.c
drivers/led/: led.c
scripts/mem_plot/: README.md  mem_plot.sh  plot_mem.plt
statemachine/: CMakeLists.txt  main.c
udp/: CMakeLists.txt  client.c  server.c  utils.h
